<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".OutilCreateSuppActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="@dimen/fragment_bottom_margin"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".OutilCreateSuppActivity">

        <TextView
            android:id="@+id/texteView_liste"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/titre"
            android:gravity="center"
            android:text="@string/liste"
            android:textSize="@dimen/titre" />

        <FrameLayout
            android:id="@+id/liste_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/texteView_liste" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/fragment_top_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:onClick="ajouterJeu"
                android:text="@string/outil_create_supp_button_plus"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonDowload"
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:onClick="download"
                android:text="@string/outil_create_supp_button_dowload"
                android:textAllCaps="false"
                android:textSize="20sp" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>